--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.74"
 axum = "0.6.20"
+rgb-lib = "0.2.1"
+serde = "1.0.192"
+serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
