--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: registry.gitlab.com/hashbeam/docker/bitcoind:25.0
     command: "-fallbackfee=0.0002"
     volumes:
-      - ./tmp/bitcoin:/srv/app/.bitcoin
+      - bitcoin:/srv/app/.bitcoin
   electrs:
     image: registry.gitlab.com/hashbeam/docker/electrs:0.9.14
     volumes:
-      - ./tmp/electrs:/srv/app/db
+      - electrs:/srv/app/db
     ports:
       - 50001:50001
     depends_on:
@@ -20,3 +20,7 @@ services:
       - 50002:50001
     depends_on:
       - bitcoind
+
+volumes:
+  bitcoin:
+  electrs:
