--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "swissknife"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
+rust-version = "1.73"
+license = "MIT"
+description = "Numeraire's Bitcoin SwissKnife is a web application enabling easy integration of Bitcoin, the Lightning network and the RGB protocol."
+repository = "https://github.com/bitcoin-numeraire/swissknife"
+homepage = "https://numeraire.tech"
 
 [dependencies]
 async-trait = "0.1.74"
@@ -12,3 +16,4 @@ rgb-lib = "0.2.1"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.10" }
