--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.10" }
+bip39 = { version = "*", features=["rand_core"] }
