--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.10" }
 bip39 = { version = "*", features=["rand_core"] }
+tokio-rustls = "0.24.1"
+rustls-pemfile = "1.0.4"
+hyper = { version = "0.14", features = ["full"] }
+futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
