--- a/config/default.toml
+++ b/config/default.toml
@@ -28,3 +28,4 @@ enabled = false
 domain = "domain.auth0.com"
 audience = "https://swissknife.numeraire.tech/api/v1"
 jwks_refresh_interval = "1h"
+leeway = 60
