--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://numeraire.tech"
 
 [dependencies]
 async-trait = "0.1.74"
-axum = "0.6.20"
+axum = "0.7.2"
 rgb-lib = "0.2.1"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
@@ -28,3 +28,7 @@ config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
+axum-extra = { version = "0.9.0", features = ["typed-header"] }
+jsonwebtoken = "9.2.0"
+reqwest = "0.11.23"
+humantime = "2.1.0"
