--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,12 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_SERVER_JSON_FILE: /servers.json
     ports:
       - 5050:80
     volumes:
       - pgadmin:/root/.pgadmin
+      - ./deps/pgadmin/servers.json:/servers.json
     depends_on:
       - postgres
 
