--- a/config/default.toml
+++ b/config/default.toml
@@ -29,3 +29,9 @@ domain = "domain.auth0.com"
 audience = "https://swissknife.numeraire.tech/api/v1"
 jwks_refresh_interval = "1h"
 leeway = 60
+
+[database]
+max_lifetime = "30m"
+idle_timeout = "5m"
+max_connections = 10
+min_connections = 0
