postgres done with example insert

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,5 @@ sqlx = { version = "0.7", features = [
     "postgres",
     "macros",
 ] }
+uuid = { version = "1.6.1", features = ["serde"] }
+chrono = "0.4.31"
