--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,28 +11,22 @@ homepage = "https://numeraire.tech"
 
 [dependencies]
 async-trait = "0.1.74"
-axum = "0.7"
-rgb-lib = "0.2.1"
+axum = "0.7.2"
+rgb-lib = { git = "https://github.com/RGB-Tools/rgb-lib", branch = "master" }
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.10" }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.12" }
 bip39 = { version = "*", features = ["rand_core"] }
-tokio-rustls = "0.24"
-rustls-pemfile = "1.0"
-hyper = { version = "0.14", features = ["full"] }
-futures-util = { version = "0.3", default-features = false, features = [
-    "alloc",
-] }
-config = { version = "0.13", features = ["yaml", "json", "toml"] }
-dotenv = "0.15"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["json"] }
-axum-extra = { version = "0.9", features = ["typed-header"] }
-jsonwebtoken = "9.2"
-reqwest = "0.11"
-humantime = "2.1"
-sqlx = { version = "0.7", features = [
+config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
+dotenv = "0.15.0"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
+axum-extra = { version = "0.9.0", features = ["typed-header"] }
+jsonwebtoken = "9.2.0"
+reqwest = "0.11.23"
+humantime = "2.1.0"
+sqlx = { version = "0.7.2", features = [
     "runtime-tokio",
     "tls-rustls",
     "postgres",
