--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ sqlx = { version = "0.7.2", features = [
 ] }
 uuid = { version = "1.6.1", features = ["serde"] }
 chrono = "0.4.31"
+thiserror = "1.0.56"
