--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rgb-lib = { git = "https://github.com/RGB-Tools/rgb-lib", branch = "master" }
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.2.12" }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.3.1" }
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
@@ -24,7 +24,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 axum-extra = { version = "0.9.0", features = ["typed-header"] }
 jsonwebtoken = "9.2.0"
-reqwest = "0.11.23"
+reqwest = "=0.11.20"
 humantime = "2.1.0"
 sqlx = { version = "0.7.2", features = [
     "runtime-tokio",
@@ -35,4 +35,4 @@ sqlx = { version = "0.7.2", features = [
 uuid = { version = "1.6.1", features = ["serde"] }
 chrono = "0.4.31"
 thiserror = "1.0.56"
-tower-http = { version = "0.5", features = ["timeout", "trace"] }
+tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
