--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ uuid = { version = "1.6.1", features = ["serde"] }
 chrono = "0.4.31"
 thiserror = "1.0.56"
 tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
+regex = "1"
