--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ sqlx = { version = "0.7.2", features = [
     "postgres",
     "macros",
 ] }
-uuid = { version = "1.6.1", features = ["serde"] }
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
 chrono = "0.4.31"
 thiserror = "1.0.56"
 tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
