--- a/config/default.toml
+++ b/config/default.toml
@@ -6,6 +6,7 @@ request_timeout = "20s"
 # Lightning settings
 [lightning]
 working_dir = "storage/breez"
+domain = "numeraire.tech"
 
 # RGB settings
 [rgb]
