--- a/config/default.toml
+++ b/config/default.toml
@@ -7,6 +7,7 @@ request_timeout = "60s"
 [lightning]
 working_dir = "storage/breez"
 domain = "numeraire.tech"
+log_in_file = true
 
 # RGB settings
 [rgb]
@@ -25,6 +26,7 @@ thread_ids = false
 thread_names = false
 level = "info"
 filter = "swissknife"
+file = false
 
 [auth]
 # If set to true, the server will require authentication
