--- a/config/default.toml
+++ b/config/default.toml
@@ -1,7 +1,7 @@
 # Web server settings
 [web]
 addr = "0.0.0.0:3000"
-request_timeout = "60s"
+request_timeout = "180s"
 
 # Lightning settings
 [lightning]
@@ -25,7 +25,7 @@ line_number = false
 thread_ids = false
 thread_names = false
 level = "info"
-filter = "swissknife"
+filter = "swissknife=info"
 file = false
 
 [auth]
