--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,8 @@ sea-orm = { version = "0.12", features = [
 ] }
 strum = "0.26"
 strum_macros = "0.26"
+tonic = "0.11.0"
+prost = "0.12.4"
+
+[build-dependencies]
+tonic-build = "0.11.0"
