--- a/config/default.toml
+++ b/config/default.toml
@@ -1,13 +1,16 @@
 # Web server settings
 [web]
 addr = "0.0.0.0:3000"
-request_timeout = "180s"
+request_timeout = "60s"
 
 # Lightning settings
 [lightning]
 working_dir = "storage/breez"
+certs_dir = "certs/greenlight"
 domain = "numeraire.tech"
 log_in_file = false
+invoice_expiry = 3600
+restore_only = true
 
 # RGB settings
 [rgb]
