--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ sea-orm = { version = "0.12", features = [
 ] }
 strum = "0.26"
 strum_macros = "0.26"
-tonic = "0.11.0"
+tonic = { version = "0.11.0", features = ["tls"] }
 prost = "0.12.4"
 
 [build-dependencies]
