--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ async-trait = "0.1.74"
 axum = "0.7.2"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
+serde_bolt = "=0.3.4"
 tokio = { version = "1.34", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.0-rc5" }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.1-rc2" }
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
