--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ axum = "0.7.2"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 serde_bolt = "=0.3.4"
+serde_with = "3.8.1"
 tokio = { version = "1.34", features = ["full"] }
 breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.1-rc2" }
 bip39 = { version = "*", features = ["rand_core"] }
