--- a/config/default.toml
+++ b/config/default.toml
@@ -8,6 +8,7 @@ request_timeout = "60s"
 invoice_expiry = 3600
 domain = "numeraire.tech"
 provider = "breez"
+fee_buffer = 0.02
 
 [lightning.breez_config]
 working_dir = "storage/breez"
