--- a/config/default.toml
+++ b/config/default.toml
@@ -1,22 +1,21 @@
+# App config
+invoice_expiry = 3600
+domain = "numeraire.tech"
+fee_buffer = 0.02
+lightning_provider = "breez"
+
 # Web server settings
 [web]
 addr = "0.0.0.0:3000"
 request_timeout = "60s"
 
-# Lightning settings
-[lightning]
-invoice_expiry = 3600
-domain = "numeraire.tech"
-provider = "breez"
-fee_buffer = 0.02
-
-[lightning.breez_config]
+[breez_config]
 working_dir = "storage/breez"
 certs_dir = "certs/greenlight"
 log_in_file = false
 restore_only = true
 
-[lightning.cln_config]
+[cln_config]
 endpoint = "https://127.0.0.1:11003"
 certs_dir = "certs/cln"
 
@@ -54,3 +53,5 @@ idle_timeout = "5m"
 max_connections = 10
 min_connections = 0
 acquire_timeout = "5s"
+connect_timeout = "30s"
+sqlx_logging = true
