add websocket client and rest

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SWISSKNIFE_BREEZ_CONFIG__API_KEY="HERE_YOUR_API_KEY"
 SWISSKNIFE_BREEZ_CONFIG__SEED="HERE_YOUR_BREEZ_MNEMONIC" 
 SWISSKNIFE_RGB__MNEMONIC="HERE_YOUR_RGB_MNEMONIC"
 SWISSKNIFE_DATABASE__URL="postgres://postgres:postgres@localhost/numeraire"
+SWISSKNIFE_CLN_REST_CONFIG__RUNE="HERE_YOUR_RUNE"
 
 # Database migrations
 DATABASE_URL="postgres://postgres:postgres@localhost/numeraire"
