--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1.0.108"
 serde_bolt = "=0.3.4"
 serde_with = "3.8.1"
 tokio = { version = "1.34", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.1-rc2" }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.2-rc1" }
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
@@ -45,6 +45,8 @@ strum_macros = "0.26"
 tonic = { version = "0.11.0", features = ["tls"] }
 prost = "0.12.4"
 lightning-invoice = "0.31.0"
+http = "1.1.0"
+tungstenite = { version = "0.23.0", features = ["native-tls"] }
 
 [build-dependencies]
 tonic-build = "0.11.0"
