--- a/config/default.toml
+++ b/config/default.toml
@@ -16,8 +16,16 @@ log_in_file = false
 restore_only = true
 
 [cln_config]
-endpoint = "https://127.0.0.1:11003"
+endpoint = "https://localhost:11003"
 certs_dir = "certs/cln"
+
+[cln_rest_config]
+endpoint = "http://localhost:3010/v1"
+connect_timeout = "5s"
+timeout = "30s"
+connection_verbose = true
+accept_invalid_certs = false
+ws_endpoint = "ws://localhost:3010"
 
 # RGB settings
 [rgb]
