--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ prost = "0.12.4"
 lightning-invoice = "0.31.0"
 http = "1.1.0"
 tungstenite = { version = "0.23.0", features = ["native-tls"] }
+hex = "0.4.3"
 
 [build-dependencies]
 tonic-build = "0.11.0"
