--- a/config/default.toml
+++ b/config/default.toml
@@ -16,14 +16,14 @@ log_in_file = false
 restore_only = true
 
 [cln_config]
-endpoint = "https://localhost:11003"
-certs_dir = "certs/cln"
+endpoint = "https://localhost:50051"
+certs_dir = "certs"
 
 [cln_rest_config]
 endpoint = "http://localhost:3010/v1"
 connect_timeout = "5s"
 timeout = "30s"
-connection_verbose = false
+connection_verbose = true
 accept_invalid_certs = false
 ws_endpoint = "ws://localhost:3010"
 
