--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,10 @@ strum_macros = "0.26"
 tonic = { version = "0.11.0", features = ["tls"] }
 prost = "0.12.4"
 lightning-invoice = "0.31.0"
-http = "1.1.0"
-tungstenite = { version = "0.23.0", features = ["native-tls"] }
 hex = "0.4.3"
 anyhow = "1.0.86"
+tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
+futures-util = "0.3.30"
 
 [build-dependencies]
 tonic-build = "0.11.0"
