--- a/config/default.toml
+++ b/config/default.toml
@@ -21,6 +21,7 @@ certs_dir = "./deps/lightningd/data"
 maxfeepercent = 0.5
 payment_timeout = 60
 payment_exemptfee = 5000
+retry_delay = 5
 
 [cln_rest_config]
 endpoint = "http://localhost:3010/v1"
@@ -29,6 +30,10 @@ timeout = "30s"
 connection_verbose = true
 accept_invalid_certs = false
 ws_endpoint = "ws://localhost:3010"
+maxfeepercent = 0.5
+payment_timeout = 60
+payment_exemptfee = 5000
+retry_delay = 5
 
 # RGB settings
 [rgb]
