--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://numeraire.tech"
 [dependencies]
 async-trait = "0.1.74"
 axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["typed-header", "query"] }
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 serde_bolt = "=0.3.4"
@@ -23,7 +24,6 @@ config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
-axum-extra = { version = "0.9.0", features = ["typed-header"] }
 jsonwebtoken = "9.2.0"
 reqwest = "=0.11.20"
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
