--- a/config/default.toml
+++ b/config/default.toml
@@ -29,11 +29,12 @@ connect_timeout = "5s"
 timeout = "30s"
 connection_verbose = true
 accept_invalid_certs = false
-ws_endpoint = "ws://localhost:3010"
 maxfeepercent = 0.5
 payment_timeout = "60s"
 payment_exemptfee = 5000
-retry_delay = "5s"
+ws_endpoint = "ws://localhost:3010"
+ws_min_reconnect_delay_delay = 1
+ws_max_reconnect_delay_delay = 30
 
 # RGB settings
 [rgb]
