--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,34 @@
 [package]
 name = "swissknife"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
-rust-version = "1.73"
+rust-version = "1.79"
 license = "MIT"
-description = "Numeraire's Bitcoin SwissKnife is a software application enabling easy integration of Bitcoin, the Lightning network and the RGB protocol."
+description = "Numeraire SwissKnife enables easy integration of Bitcoin, Lightning and smart contract protocols."
 repository = "https://github.com/bitcoin-numeraire/swissknife"
 homepage = "https://numeraire.tech"
 
 [dependencies]
-async-trait = "0.1.74"
-axum = "0.7.2"
-axum-extra = { version = "0.9.0", features = ["typed-header", "query"] }
-serde = { version = "1.0.192", features = ["derive"] }
-serde_json = "1.0.108"
+async-trait = "0.1.80"
+axum = "0.7.5"
+axum-extra = { version = "0.9.3", features = ["typed-header", "query"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.120"
 serde_bolt = "=0.3.4"
-serde_with = "3.8.1"
-tokio = { version = "1.34", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.4.2-rc1" }
+serde_with = "3.8.2"
+tokio = { version = "1.38", features = ["full"] }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.5.0" }
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
-jsonwebtoken = "9.2.0"
+jsonwebtoken = "9.3.0"
 reqwest = "=0.11.20"
-uuid = { version = "1.6.1", features = ["v4", "serde"] }
-chrono = "0.4.31"
-thiserror = "1.0.56"
+uuid = { version = "1.9.1", features = ["v4", "serde"] }
+chrono = "0.4.38"
+thiserror = "1.0.61"
 tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
 regex = "1"
 sea-orm = { version = "0.12", features = [
@@ -42,15 +42,15 @@ sea-orm = { version = "0.12", features = [
 strum = "0.26"
 strum_macros = "0.26"
 tonic = { version = "0.11.0", features = ["tls"] }
-prost = "0.12.4"
+prost = "0.12.6"
 lightning-invoice = "0.31.0"
 hex = "0.4.3"
 anyhow = "1.0.86"
-tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
 futures-util = "0.3.30"
 humantime = "2.1.0"
 rust_socketio = { version = "0.6.0", features = ["async"] }
 bcrypt = "0.15.1"
+migration = { path = "migration" }
 
 [build-dependencies]
 tonic-build = "0.11.0"
