--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:15.5
+    image: postgres:16.3
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
@@ -24,7 +24,7 @@ services:
       - "log_destination=stderr" # Send logs to stderr
 
   pgadmin:
-    image: dpage/pgadmin4:8.5
+    image: dpage/pgadmin4:8.9
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
@@ -37,23 +37,24 @@ services:
     depends_on:
       - postgres
 
-  lightningd:
-    image: elementsproject/lightningd:v24.05
+  swissknife:
+    image: swissknife:latest
     environment:
-      LIGHTNINGD_NETWORK: "regtest"
+      RUN_MODE: ${RUN_MODE:-production}
+      SWISSKNIFE_DATABASE__URL: ${SWISSKNIFE_DATABASE__URL:-postgres://postgres:postgres@postgres/numeraire}
+      SWISSKNIFE_BREEZ_CONFIG__API_KEY: ${SWISSKNIFE_BREEZ_CONFIG__API_KEY:-}
+      SWISSKNIFE_BREEZ_CONFIG__SEED: ${SWISSKNIFE_BREEZ_CONFIG__SEED:-}
+      SWISSKNIFE_CLN_REST_CONFIG__RUNE: ${SWISSKNIFE_CLN_REST_CONFIG__RUNE:-}
+      SWISSKNIFE_JWT__PASSWORD: ${SWISSKNIFE_JWT__PASSWORD:-}
+    depends_on:
+      - postgres
     ports:
-      - 3010:3010
-      - 50051:50051
+      - "3000:3000"
     volumes:
-      - ./deps/lightningd/data:/root/.lightning/regtest
-      - ./deps/lightningd/regtest.conf:/root/.lightning/regtest/config
-    networks:
-      - polar-network-1_default
+      - ./config/development.yml:/config/development.yml
+      - ./certs/greenlight:/certs/greenlight
+      - ./storage/breez:/storage/breez
 
 volumes:
   db:
   pgadmin:
-
-networks:
-  polar-network-1_default:
-    external: true
