--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Release
 
 on:
   push:
@@ -6,7 +6,10 @@ on:
       - "v*"
 
 jobs:
-  build:
+  release:
+    permissions:
+      contents: write
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -36,3 +39,11 @@ jobs:
           tags: |
             registry.digitalocean.com/swissknife/swissknife:latest
             registry.digitalocean.com/swissknife/swissknife:${{ github.ref_name }}
+
+      - name: Draft Release Notes
+        id: draft_release
+        uses: release-drafter/release-drafter@v6
+        with:
+          config-name: .github/release-drafter.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
