--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ dotenv = "0.15.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
 jsonwebtoken = "9.3.0"
-reqwest = "=0.11.20"
+reqwest = { version = "0.12.5", features = ["json"] }
 uuid = { version = "1.9.1", features = ["v4", "serde"] }
 chrono = "0.4.38"
 thiserror = "1.0.61"
