--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
   swissknife:
     image: registry.digitalocean.com/swissknife/swissknife:latest
     environment:
+      RUN_MODE: ${RUN_MODE:-development}
       SWISSKNIFE_DATABASE__URL: ${SWISSKNIFE_DATABASE__URL:-postgres://postgres:postgres@postgres/numeraire}
       SWISSKNIFE_BREEZ_CONFIG__API_KEY: ${SWISSKNIFE_BREEZ_CONFIG__API_KEY:-}
       SWISSKNIFE_BREEZ_CONFIG__SEED: ${SWISSKNIFE_BREEZ_CONFIG__SEED:-}
@@ -55,6 +56,16 @@ services:
       - ./config/production.toml:/config/production.toml
       - ./certs/greenlight:/certs/greenlight
       - ./storage/breez:/storage/breez
+
+  dashboard:
+    image: swissknife-dashboard:latest
+    environment:
+      LN_PROVIDER: breez
+      NEXT_PUBLIC_SITENAME: "Numeraire Dashboard"
+      NEXT_PUBLIC_SERVER_URL: http://swissknife:3000
+      NEXT_PUBLIC_AUTH_METHOD: jwt
+    ports:
+      - "8080:8080"
 
 volumes:
   db:
