--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ migration = { path = "migration" }
 utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-scalar = { version = "0.1.0", features = ["axum"] }
 native-tls = "0.2.12"
+nostr-sdk = "0.35.0"
 
 [build-dependencies]
 tonic-build = "0.11.0"
