--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-scalar = { version = "0.1.0", features = ["axum"] }
 native-tls = "0.2.12"
 nostr-sdk = "0.35.0"
+rand = "0.8.5"
+base64 = "0.22.1"
 
 [build-dependencies]
 tonic-build = "0.11.0"
