--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ build = "build.rs"
 
 [dependencies]
 async-trait = "0.1.83"
-axum = "0.7.7"
+axum = { version = "0.7.7", features = ["macros"] }
 axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
