receiving incoming lightning payments from LND

--- a/config/default.toml
+++ b/config/default.toml
@@ -40,12 +40,12 @@ accept_invalid_hostnames = false
 maxfeepercent = 0.5
 payment_timeout = "60s"
 payment_exemptfee = 5000
-ws_min_reconnect_delay_delay = 1
-ws_max_reconnect_delay_delay = 30
+ws_min_reconnect_delay = "1s"
+ws_max_reconnect_delay = "30s"
 
 # LND Lightning provider
 [lnd_config]
-endpoint = "https://localhost:8080"
+host = "localhost:8080"
 macaroon_path = "certs/lnd/admin.macaroon"
 ca_cert_path = "certs/lnd/tls.cert"
 connect_timeout = "5s"
@@ -56,8 +56,8 @@ accept_invalid_hostnames = false
 maxfeepercent = 0.5
 payment_timeout = "60s"
 payment_exemptfee = 5000
-ws_min_reconnect_delay_delay = 1
-ws_max_reconnect_delay_delay = 30
+ws_min_reconnect_delay = "1s"
+ws_max_reconnect_delay = "30s"
 
 # Logging
 [logging]
