--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,8 @@ native-tls = "0.2.12"
 nostr-sdk = "0.35.0"
 rand = "0.8.5"
 base64 = "0.22.1"
-rustls = "0.23.15"
+tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
+http = "1.1.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
