--- a/config/default.toml
+++ b/config/default.toml
@@ -22,7 +22,7 @@ seed = "CHANGE_ME"
 
 # Core Lightning provider
 [cln_grpc_config]
-endpoint = "https://localhost:50051"
+endpoint = "https://localhost:11002"
 certs_dir = "certs/lightningd"
 maxfeepercent = 0.5
 payment_timeout = "60s"
@@ -40,8 +40,23 @@ accept_invalid_hostnames = false
 maxfeepercent = 0.5
 payment_timeout = "60s"
 payment_exemptfee = 5000
-ws_min_reconnect_delay_delay = 1
-ws_max_reconnect_delay_delay = 30
+ws_min_reconnect_delay = "1s"
+ws_max_reconnect_delay = "30s"
+
+# LND Lightning provider
+[lnd_config]
+host = "localhost:8080"
+macaroon_path = "certs/lnd/admin.macaroon"
+ca_cert_path = "certs/lnd/tls.cert"
+connect_timeout = "5s"
+timeout = "90s"
+connection_verbose = true
+accept_invalid_certs = false
+accept_invalid_hostnames = false
+payment_timeout = "60s"
+fee_limit_msat = 25000
+ws_min_reconnect_delay = "1s"
+ws_max_reconnect_delay = "30s"
 
 # Logging
 [logging]
