--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swissknife"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Dario Anongba Varela <dario.varela@numeraire.tech>"]
 rust-version = "1.79"
@@ -32,13 +32,13 @@ chrono = "0.4.38"
 thiserror = "1.0.64"
 tower-http = { version = "0.6.1", features = ["timeout", "trace", "cors"] }
 regex = "1"
-sea-orm = { version = "0.12", features = [
+sea-orm = { version = "1.0", features = [
     "sqlx-postgres",
+    "sqlx-sqlite",
     "runtime-tokio-rustls",
     "macros",
     "with-chrono",
     "with-uuid",
-    "debug-print",
 ] }
 strum = "0.26"
 strum_macros = "0.26"
