--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -41,6 +41,9 @@
     "@mui/x-date-pickers": "^7.23.1",
     "@mui/x-tree-view": "^7.23.0",
     "@supabase/supabase-js": "^2.47.2",
+    "@tsparticles/plugin-absorbers": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@yudiel/react-qr-scanner": "^2.0.8",
     "apexcharts": "^4.1.0",
     "autosuggest-highlight": "^3.3.4",
@@ -78,6 +81,7 @@
     "@eslint/js": "^9.17.0",
     "@hey-api/openapi-ts": "^0.59.1",
     "@svgr/webpack": "^8.1.0",
+    "@tsparticles/engine": "^3.5.0",
     "@types/autosuggest-highlight": "^3.2.3",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^22.10.1",
