--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ SWISSKNIFE_BREEZ_CONFIG__SEED="HERE_YOUR_BREEZ_MNEMONIC"
 # Core Lightning
 SWISSKNIFE_CLN_REST_CONFIG__RUNE="HERE_YOUR_RUNE"
 
+# JWT
+SWISSKNIFE_JWT__SECRET="HERE_YOUR_JWT_SECRET"
