production for umbrel

--- a/dashboard/.env.production
+++ b/dashboard/.env.production
@@ -1,12 +1,5 @@
-LN_PROVIDER=cln
+LN_PROVIDER=lnd
 
 # App
-NEXT_PUBLIC_SERVER_URL=https://api.numeraire.tech
-NEXT_PUBLIC_AUTH_METHOD=auth0
-NEXT_PUBLIC_APPNAME="Numeraire Dashboard"
-
-# Auth0
-NEXT_PUBLIC_AUTH0_DOMAIN=auth.numeraire.tech
-NEXT_PUBLIC_AUTH0_CLIENT_ID=7Jh0DPs8JoAHNrdTbIYKVDty7YNPWbSM
-NEXT_PUBLIC_AUTH0_CALLBACK_URL=https://app.numeraire.tech/login/callback
-NEXT_PUBLIC_AUTH0_AUDIENCE=https://swissknife.numeraire.tech/api/v1
+NEXT_PUBLIC_SERVER_URL=server:3000
+NEXT_PUBLIC_AUTH_METHOD=jwt
