--- a/dashboard/.env.production
+++ b/dashboard/.env.production
@@ -1,5 +1,5 @@
 LN_PROVIDER=lnd
 
 # App
-NEXT_PUBLIC_SERVER_URL=http://server:3000
+NEXT_PUBLIC_SERVER_URL=http://numeraire-swissknife_api_1:3000
 NEXT_PUBLIC_AUTH_METHOD=jwt
