--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,12 @@ reqwest = { version = "0.12.8", features = ["json"] }
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
 chrono = "0.4.38"
 thiserror = "1.0.64"
-tower-http = { version = "0.6.1", features = ["timeout", "trace", "cors"] }
+tower-http = { version = "0.6.1", features = [
+    "fs",
+    "timeout",
+    "trace",
+    "cors",
+] }
 regex = "1"
 sea-orm = { version = "1.0", features = [
     "sqlx-postgres",
