--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,3 +70,7 @@ bytes = "1.7.2"
 [build-dependencies]
 tonic-build = "0.12.3"
 chrono = "0.4.38"
+
+[dev-dependencies]
+mockall = "0.11"
+tokio = { version = "1.40", features = ["full"] }
